--- a/fashweb.css
+++ b/fashweb.css
@@ -56,15 +56,15 @@ header {
 
 .nav-icon i {
     margin-right: 20px;
-    color: #2c2c2c;
+    color:#000;
     font-size: 35px;
     font-weight: 400;
-    transition: all .42 ease;
+    transition: all .42 ease-in;
 }
 
 .navicon i:hover {
-    transform: scale(1.1);
-    color: #EE1C47;
+    transform: scale(0.9);
+    color: aliceblue;
 }
 
 #menu-icon {
@@ -96,9 +96,9 @@ section {
 }
 .main-text{
     margin: 0 auto;
-    width: 50%;
+    width: 100%;
     text-align: center;
-    margin-top: 300px;
+    margin-top: 270px;
 }
 
 
@@ -132,7 +132,7 @@ section {
 
 .main-btn {
     display: inline-block;
-    color: #111;
+    color: darkgoldenrod;
     font-size: 20px;
     font-weight: 400;
     text-transform: capitalize;
@@ -203,19 +203,24 @@ header.sticky{
 
 .products {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+    grid-template-columns: repeat(3,1fr);
     gap: 2rem;
+    background-color: darkgoldenrod;
 }
 
 .row{
-    position:relative;
-    transition: all .40s;
+    position: relative;
+    transition: all .40s ;
+    background-position: center;
+    width: 100%;
 }
 
 .row img{
     width: 100%;
     height: auto;
     transition: all .40s;
+    
+    
 }
 
 
@@ -235,6 +240,256 @@ header.sticky{
     background-color: #27b737;
     padding: 3px 10px;
     border-radius: 2px;
+}
+
+.heart-icon {
+    position: relative;
+    right: 0;
+    font-size: 20px;
+}
+
+
+.heart-icon:hover{
+    color: #EE1C47;
+}
+
+
+.rating i{
+
+    color: #FF8C00;
+    font-size: 18px;
+
+}
+
+
+.price h4 {
+    color: #111;
+    font-size: 16px;
+    text-transform: capitalize;
+    font-weight: 400;
+}
+
+.price p{
+    color: #151515;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+
+.client-reviews {
+    background-color: darkgoldenrod;
+    padding: auto;
+}
+
+.reviews {
+    text-align: center;
+}
+
+
+.reviews h3 {
+    color: #111;
+    font-size: 25px;
+    text-transform: center;
+    text-align: center;
+    font-weight: 700;
+}
+
+
+.reviews img{
+    width: 100px;
+    height: auto;
+    border-radius: 50px;
+    margin: 10px 0;
+}
+
+
+.reviews p{
+    color: darkgray;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25px;
+    margin-bottom: 10px;
+}
+
+
+.reviews h2{
+
+    font-size: 22px;
+    color: #000;
+    font-weight: 400;
+    text-transform: capitalize;
+    margin-bottom: 2px;
+
+}
+
+
+.up-center-text h2{
+    text-align: center;
+    color: #111;
+    font-size: 25px;
+    text-transform: capitalize;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+
+.cart img{
+    width: 380px;
+    height: auto;
+    border-radius: 5px;
+  
+}
+
+.update-cart {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem; 
+    background-color: darkgoldenrod;
+    
+}
+
+
+.cart h5 {
+    color: darkgray;
+    font-size: 14px;
+    text-transform: capitalize;
+    font-weight: 500;
+}
+
+.cart h4 {
+    color: #111;
+    font-size:18px;
+    font-weight: 600;
+}
+
+.cart p{
+    color:darkgray;
+    font-size: 15px;
+    max-width: 380px;
+    line-height: 25px;
+    margin-bottom: 12px;
+}
+
+.cart h6 {
+    color: #151515;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+
+.contact {
+    background-color: darkgoldenrod;
+}
+
+.contact-info{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(160px, auto));
+    gap: 3rem;
+}
+
+.first-info img{
+    width: 140px;
+    height:auto;
+}
+
+.contact-info h4 {
+    color: #212529;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+
+.contact-info p{
+    color: darkgray;
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 1.5;
+    margin-bottom: 10px;
+    cursor:pointer;
+    transition: all .42s;
+}
+
+
+.contact-info p:hover{
+    color: aliceblue;
+    
+}
+
+.contact-info i{
+    color: #565656;
+    margin-right: 10px;
+    font-size: 18px;
+    transition: all .42s;
+}
+
+
+.contact-info i:hover{
+    transform: scale(1.3);
+}
+
+.end-text{
+    background-color: #edfff1;
+    text-align: center;
+    padding:20px;
+}
+
+.end-text p{
+    color: #111;
+    text-transform: capitalize;
+}
+
+/* Responsive-css */
+
+@media(max-width:890px){
+    header{
+        padding:20px 3%;
+        transition:  4s;
+    }
+}
+
+
+@media(max-width:630px){
+    .main-text h1{
+        font-size: 50px;
+        transition: .4s;
+    }
+
+    .main-text p{
+        font-size: 18px;
+        transition: .4s;
+    }
+
+    .main-btn{
+        padding: 10px 20px;
+        transition: .4s;
+    }
+}
+
+
+@media(max-width:750px){
+    .navmenu{
+        position:  absolute;
+        top: 100%;
+        right: -100%;
+        width: 300px;
+        height: 130vh;
+        background: #edfff1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 120px 30px;
+        transition: all .42s;
+    }
+
+    .navmenu a{
+        display: block;
+        margin: 18px 0;
+    }
+
+    .navmenu.open{
+        right: 0;
+    }
 }
 
 
